--- a/test.qmd
+++ b/test.qmd
@@ -12,7 +12,7 @@ Quarto enables you to weave together content and executable code into a finished
 
 When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
 
-```{r}
+```{r} hola test hola test hola test}
 1 + 1
 ```
 
