commit - pipeline para union entre dataframes

--- a/scripts/visualizacion.ipynb
+++ b/scripts/visualizacion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 146,
    "id": "bc9c5634",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 147,
    "id": "edf2c794",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4    440.268   1663.833       NaN      NaN        NaN  Aguascalientes  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 148,
    "id": "c98b5e4b",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "[5 rows x 132 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 149,
    "id": "fabc04e8",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 150,
    "id": "54469b94",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "(10521, 11)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "id": "0d3b38f9",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 152,
    "id": "61534113",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 153,
    "id": "b4b5a2c5",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 154,
    "id": "792b58fb",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 155,
    "id": "cc0d4f47",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 156,
    "id": "f02bbb48",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 157,
    "id": "07bd38a1",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 158,
    "id": "3bf7ab3b",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
        "       'Tlaxcala', 'Veracruz', 'Yucatán', 'Zacatecas'], dtype=object)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 159,
    "id": "b747ca27",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "       'Trancoso', 'Santa María de la Paz'], dtype=object)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 160,
    "id": "db77234e",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "       '32 ZACATECAS'], dtype=object)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 161,
    "id": "5219a49f",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
        "       '056 ZACATECAS'], dtype=object)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 162,
    "id": "0e19b733",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "       'San Ignacio Cerro Gordo'], dtype=object)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 163,
    "id": "8671f195",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1204,7 @@
        "2523      6.455    369.236      NaN      NaN      NaN  Jalisco  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 164,
    "id": "cf7a122c",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,7 @@
        "       'Fuentes naturales'], dtype=object)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 165,
    "id": "e9019338",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 166,
    "id": "2b314628",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 167,
    "id": "9323e1b5",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 168,
    "id": "19e1d540",
    "metadata": {},
    "outputs": [
@@ -1522,19 +1522,19 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "socioDemo[\"desc_mun1\"]=socioDemo[\"desc_mun1\"].str.replace(r'[^a-zA-Z]', '', regex=True)\n",
+    "socioDemo[\"desc_mun1\"]=socioDemo[\"desc_mun1\"].str[4:]\n",
     "socioDemo.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 169,
    "id": "f0458afe",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
        "4    440.268   1663.833       NaN      NaN        NaN  Aguascalientes  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 170,
    "id": "26881f85",
    "metadata": {},
    "outputs": [
@@ -1750,19 +1750,19 @@
        "4  2022_01001003_01  AGUASCALIENTES"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "socioDemoMun=socioDemo[[\"FOLIO_INT\",\"desc_mun1\"]]\n",
-    "socioDemoMun.head()"
+    "socioDemoMun.head() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 171,
    "id": "1ec3e578",
    "metadata": {},
    "outputs": [
@@ -1968,7 +1968,7 @@
        "[5 rows x 133 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 172,
    "id": "7116bfe2",
    "metadata": {},
    "outputs": [],
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "id": "c818d7ee",
    "metadata": {},
    "outputs": [
@@ -2000,7 +2000,7 @@
        "(13899, 132)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 174,
    "id": "96d6d3f1",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2021,7 @@
        "(13899, 133)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 175,
+   "id": "3baa372e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ANGEL ALBINO CORZO',\n",
+       " 'DOLORES HIDALGO CUNA DE LA INDEPEN',\n",
+       " 'HEROICA CIUDAD DE HUAJUAPAN DE LEÓ',\n",
+       " 'NANCHITAL DE LÁZARO CÁRDENAS DEL R',\n",
+       " 'SANTIAGO TULANTEPEC DE LUGO GUERRE',\n",
+       " 'SILAO DE LA VICTORIA'}"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(dataMuestras[\"Municipio\"]) - set(contaminantes[\"Municipio\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "id": "f739b15d",
    "metadata": {},
    "outputs": [
@@ -2238,7 +2264,7 @@
        "[5 rows x 143 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2266,8 +2292,39 @@
     }
    ],
    "source": [
+    "# DATA antes de hacer join correctamente\n",
     "data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20ba84d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86898, 143)"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DATA tras hacer join correctamente\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ccb1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
