--- a/scripts/tipo_fuente_seleccion.ipynb
+++ b/scripts/tipo_fuente_seleccion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "id": "e711818b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "id": "bffe50bf",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4    440.268   1663.833       NaN      NaN        NaN  Aguascalientes  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "id": "9df36a13",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "id": "806abf5e",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "id": "56d62595",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "12265"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,12 +346,12 @@
    "id": "89ffe1dc",
    "metadata": {},
    "source": [
-    "Se observa que todos los valores nulos del DataFrame \"contaminantes\" pertenecen a las observaciones con \"Tipo_de_Fuente\" igual a \"Fuentes de área\", por lo que es recomendable descartar este valor. Por la poca cantidad de observaciones del valor \"Fuentes fijas\" es recomendable descartarlo."
+    "Se observa que todos los valores nulos del DataFrame \"contaminantes\" pertenecen a las observaciones con \"Tipo_de_Fuente\" igual a \"Fuentes naturales\", por lo que es recomendable descartar este valor. Por la poca cantidad de observaciones del valor \"Fuentes fijas\" es recomendable descartarlo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "id": "88ba3f9e",
    "metadata": {},
    "outputs": [
@@ -366,6 +366,73 @@
    "source": [
     "valores = [v for v in valores if v not in [\"Fuentes naturales\", \"Fuentes fijas\"]]\n",
     "print(valores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0c4453",
+   "metadata": {},
+   "source": [
+    "## Varianza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3a990bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========\n",
+      "Fuentes de área\n",
+      "==========\n",
+      "SO_2      5.091655e+02\n",
+      "CO        6.275773e+06\n",
+      "NOx       1.163542e+04\n",
+      "COV       4.359996e+06\n",
+      "PM_010    2.310674e+05\n",
+      "PM_2_5    8.357489e+04\n",
+      "NH_3      8.656815e+05\n",
+      "dtype: float64\n",
+      "\n",
+      "==========\n",
+      "Fuentes móviles carreteros\n",
+      "==========\n",
+      "SO_2      1.583006e+03\n",
+      "CO        5.702658e+07\n",
+      "NOx       6.028401e+06\n",
+      "COV       6.310334e+05\n",
+      "PM_010    1.402326e+04\n",
+      "PM_2_5    1.109386e+04\n",
+      "NH_3      2.290881e+02\n",
+      "dtype: float64\n",
+      "\n",
+      "==========\n",
+      "Fuentes móviles que no circulan por carretera\n",
+      "==========\n",
+      "SO_2         84.300119\n",
+      "CO        18038.323246\n",
+      "NOx       28269.888843\n",
+      "COV        1196.108628\n",
+      "PM_010      112.102246\n",
+      "PM_2_5      105.054257\n",
+      "NH_3          0.002326\n",
+      "dtype: float64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in valores:\n",
+    "    print(\"==========\")\n",
+    "    print(i)\n",
+    "    print(\"==========\")\n",
+    "    aux = contaminantes[contaminantes[\"Tipo_de_Fuente\"] == i]\n",
+    "    print(aux.drop(columns=[\"Entidad_federativa\", \"Municipio\", \"Tipo_de_Fuente\", \"Entidad\"]).var())\n",
+    "    print()"
    ]
   }
  ],
