tipo fuente será fuente de área

--- a/scripts/tipo_fuente_seleccion.ipynb
+++ b/scripts/tipo_fuente_seleccion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "id": "e711818b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "id": "bffe50bf",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4    440.268   1663.833       NaN      NaN        NaN  Aguascalientes  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "id": "9df36a13",
    "metadata": {},
    "outputs": [
@@ -196,12 +196,12 @@
    "id": "41cdf6b4",
    "metadata": {},
    "source": [
-    "## Aproximación 1: Descartar valores en función de la respectiva cantidad de valores nulos y cantidad de observaciones."
+    "## Aproximación: Descartar valores en función de la respectiva cantidad de valores nulos y cantidad de observaciones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "id": "806abf5e",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "id": "56d62595",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "12265"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "id": "88ba3f9e",
    "metadata": {},
    "outputs": [
@@ -373,13 +373,13 @@
    "id": "ee0c4453",
    "metadata": {},
    "source": [
-    "## Varianza"
+    "## Aproximación: Priorizando la varianza, seleccionaremos el valor de \"Tipo_de_Fuente\" que obtenga mayor numero de veces en las que la varianza de cada gas sea la maxima comparada con la varianza del mismo gas pero de diferente \"Tipo_de_Fuente\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3a990bbf",
+   "execution_count": 88,
+   "id": "faae9849",
    "metadata": {},
    "outputs": [
     {
@@ -388,51 +388,124 @@
      "text": [
       "==========\n",
       "Fuentes de área\n",
-      "==========\n",
-      "SO_2      5.091655e+02\n",
-      "CO        6.275773e+06\n",
-      "NOx       1.163542e+04\n",
-      "COV       4.359996e+06\n",
-      "PM_010    2.310674e+05\n",
-      "PM_2_5    8.357489e+04\n",
-      "NH_3      8.656815e+05\n",
+      "==========\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SO_2          509.17\n",
+      "CO        6275773.27\n",
+      "NOx         11635.42\n",
+      "COV       4359995.90\n",
+      "PM_010     231067.41\n",
+      "PM_2_5      83574.89\n",
+      "NH_3       865681.49\n",
       "dtype: float64\n",
       "\n",
       "==========\n",
       "Fuentes móviles carreteros\n",
       "==========\n",
-      "SO_2      1.583006e+03\n",
-      "CO        5.702658e+07\n",
-      "NOx       6.028401e+06\n",
-      "COV       6.310334e+05\n",
-      "PM_010    1.402326e+04\n",
-      "PM_2_5    1.109386e+04\n",
-      "NH_3      2.290881e+02\n",
+      "SO_2          1583.01\n",
+      "CO        57026581.08\n",
+      "NOx        6028400.90\n",
+      "COV         631033.39\n",
+      "PM_010       14023.26\n",
+      "PM_2_5       11093.86\n",
+      "NH_3           229.09\n",
       "dtype: float64\n",
       "\n",
       "==========\n",
       "Fuentes móviles que no circulan por carretera\n",
       "==========\n",
-      "SO_2         84.300119\n",
-      "CO        18038.323246\n",
-      "NOx       28269.888843\n",
-      "COV        1196.108628\n",
-      "PM_010      112.102246\n",
-      "PM_2_5      105.054257\n",
-      "NH_3          0.002326\n",
+      "SO_2         84.30\n",
+      "CO        18038.32\n",
+      "NOx       28269.89\n",
+      "COV        1196.11\n",
+      "PM_010      112.10\n",
+      "PM_2_5      105.05\n",
+      "NH_3          0.00\n",
       "dtype: float64\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for i in valores:\n",
+    "columnas = contaminantes.drop(columns=[\"Entidad_federativa\", \"Municipio\", \"Tipo_de_Fuente\", \"Entidad\"]).columns\n",
+    "\n",
+    "best = {}\n",
+    "for col in columnas:\n",
+    "    best[f\"val_{col}\"] = 0\n",
+    "    best[f\"fuente_{col}\"] = \"Nada\"\n",
+    "\n",
+    "for fuente in valores:\n",
     "    print(\"==========\")\n",
-    "    print(i)\n",
+    "    print(fuente)\n",
     "    print(\"==========\")\n",
-    "    aux = contaminantes[contaminantes[\"Tipo_de_Fuente\"] == i]\n",
-    "    print(aux.drop(columns=[\"Entidad_federativa\", \"Municipio\", \"Tipo_de_Fuente\", \"Entidad\"]).var())\n",
+    "    aux = contaminantes[contaminantes[\"Tipo_de_Fuente\"] == fuente]\n",
+    "    print(aux.drop(columns=[\"Entidad_federativa\", \"Municipio\", \"Tipo_de_Fuente\", \"Entidad\"]).var().round(2))\n",
+    "    for col in columnas:\n",
+    "        var_actual = aux[col].var()\n",
+    "        if var_actual > best[f\"val_{col}\"]:\n",
+    "            best[f\"val_{col}\"] = var_actual\n",
+    "            best[f\"fuente_{col}\"] = fuente   \n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7e0932b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========\n",
+      "Varianzas más grandes por columna\n",
+      "==========\n",
+      "SO_2: 1583.01\n",
+      "Fuentes móviles carreteros\n",
+      "\n",
+      "CO: 57026581.08\n",
+      "Fuentes móviles carreteros\n",
+      "\n",
+      "NOx: 6028400.90\n",
+      "Fuentes móviles carreteros\n",
+      "\n",
+      "COV: 4359995.90\n",
+      "Fuentes de área\n",
+      "\n",
+      "PM_010: 231067.41\n",
+      "Fuentes de área\n",
+      "\n",
+      "PM_2_5: 83574.89\n",
+      "Fuentes de área\n",
+      "\n",
+      "NH_3: 865681.49\n",
+      "Fuentes de área\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"==========\")\n",
+    "print(\"Varianzas más grandes por columna\")\n",
+    "print(\"==========\")\n",
+    "for col in columnas:\n",
+    "    print(f\"{col}: {best[f'val_{col}']:.2f}\")\n",
+    "    print(f\"{best[f'fuente_{col}']}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ac537e6",
+   "metadata": {},
+   "source": [
+    "Por lo tanto el valor seleccionado será Tipo_de_Fuente = \"Fuentes de área\"."
    ]
   }
  ],
