commit - diccionario con variables subrayadas

--- a/scripts/visualizacion.ipynb
+++ b/scripts/visualizacion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 1,
    "id": "bc9c5634",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 2,
    "id": "edf2c794",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4    440.268   1663.833       NaN      NaN        NaN  Aguascalientes  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "id": "c98b5e4b",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "[5 rows x 132 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "id": "fabc04e8",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\juanp\\AppData\\Local\\Temp\\ipykernel_44056\\3625751232.py:1: DtypeWarning: Columns (10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\juanp\\AppData\\Local\\Temp\\ipykernel_46284\\3625751232.py:1: DtypeWarning: Columns (10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  socioDemo=pd.read_csv(\"..\\data\\SocioDemo\\ensanut2022_socdem.csv\", sep=\";\")\n"
      ]
     },
@@ -600,7 +600,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "id": "3fa24c52",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "[13899 rows x 23 columns]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 6,
    "id": "ec0750ac",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
        "23"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 7,
    "id": "54469b94",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
        "(10521, 11)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 8,
    "id": "0d3b38f9",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1076,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "id": "61534113",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 10,
    "id": "b4b5a2c5",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 11,
    "id": "792b58fb",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 12,
    "id": "cc0d4f47",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 13,
    "id": "f02bbb48",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 14,
    "id": "07bd38a1",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1202,7 @@
        "np.int64(2453)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 15,
    "id": "18e88d7e",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1458,7 @@
        "[10521 rows x 10 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 16,
    "id": "3bf7ab3b",
    "metadata": {},
    "outputs": [
@@ -1494,7 +1494,7 @@
        "       'Tlaxcala', 'Veracruz', 'Yucatán', 'Zacatecas'], dtype=object)"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 17,
    "id": "db77234e",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
        "       '32 ZACATECAS'], dtype=object)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 18,
    "id": "9e9b23fa",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1576,7 @@
        " '32 ZACATECAS': 'Zacatecas'}"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 19,
    "id": "7ebee3b0",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1609,7 @@
        "Name: desc_ent1, Length: 36483, dtype: object"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 20,
    "id": "b747ca27",
    "metadata": {},
    "outputs": [
@@ -1632,7 +1632,7 @@
        "       'Trancoso', 'Santa María de la Paz'], dtype=object)"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 21,
    "id": "5219a49f",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
        "       '056 ZACATECAS'], dtype=object)"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 22,
    "id": "8671f195",
    "metadata": {},
    "outputs": [
@@ -1893,7 +1893,7 @@
        "2523      6.455    369.236      NaN      NaN      NaN  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 23,
    "id": "cf7a122c",
    "metadata": {},
    "outputs": [
@@ -1916,7 +1916,7 @@
        "       'Fuentes naturales'], dtype=object)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 24,
    "id": "4b76ac62",
    "metadata": {},
    "outputs": [
@@ -2164,7 +2164,7 @@
        "[7368 rows x 10 columns]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 25,
    "id": "e9019338",
    "metadata": {},
    "outputs": [
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 26,
    "id": "2b314628",
    "metadata": {},
    "outputs": [
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 27,
    "id": "9323e1b5",
    "metadata": {},
    "outputs": [
@@ -2239,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 28,
    "id": "63ab7ab3",
    "metadata": {},
    "outputs": [
@@ -2255,7 +2255,7 @@
        " 'Fuentes de área']"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 29,
    "id": "fe2aafa0",
    "metadata": {},
    "outputs": [
@@ -2485,7 +2485,7 @@
        "[2459 rows x 9 columns]"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 30,
    "id": "ad10348f",
    "metadata": {},
    "outputs": [
@@ -2520,7 +2520,7 @@
        "Name: count, Length: 86, dtype: int64"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2533,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 31,
    "id": "8e2c3149",
    "metadata": {},
    "outputs": [
@@ -2678,7 +2678,7 @@
        "10281   44.268   30.416   40.483  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 32,
    "id": "f0458afe",
    "metadata": {},
    "outputs": [
@@ -2814,7 +2814,7 @@
        "19   278.602  126.777   1562.435  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "id": "ace6dd1a",
    "metadata": {},
    "outputs": [
@@ -2938,7 +2938,7 @@
        "19     AGUASCALIENTES JESÚS MARÍA  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2951,7 +2951,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 44,
+   "id": "4ef44920",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SO_2       0\n",
+       "CO         0\n",
+       "NOx        0\n",
+       "COV        0\n",
+       "PM_010     0\n",
+       "PM_2_5     0\n",
+       "NH_3       0\n",
+       "Ent_Mun    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contaminantes.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "19e1d540",
    "metadata": {},
    "outputs": [
@@ -3150,7 +3179,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 35,
    "id": "26881f85",
    "metadata": {},
    "outputs": [
@@ -3231,7 +3260,7 @@
        "4  2022_01001003_01  AGUASCALIENTES AGUASCALIENTES"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3244,7 +3273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 36,
    "id": "1ec3e578",
    "metadata": {},
    "outputs": [
@@ -3450,7 +3479,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3463,7 +3492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 37,
    "id": "c818d7ee",
    "metadata": {},
    "outputs": [
@@ -3473,7 +3502,7 @@
        "(13899, 23)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3484,7 +3513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 38,
    "id": "96d6d3f1",
    "metadata": {},
    "outputs": [
@@ -3494,7 +3523,7 @@
        "(13899, 22)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3505,7 +3534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 39,
    "id": "8519fb5d",
    "metadata": {},
    "outputs": [
@@ -3515,7 +3544,7 @@
        "(2459, 8)"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3526,7 +3555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 40,
    "id": "3baa372e",
    "metadata": {},
    "outputs": [
@@ -3542,7 +3571,7 @@
        " 'VERACRUZ NANCHITAL DE LÁZARO CÁRDENAS DEL R'}"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3553,7 +3582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 41,
    "id": "f739b15d",
    "metadata": {},
    "outputs": [
@@ -3899,7 +3928,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3912,7 +3941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 42,
    "id": "c20ba84d",
    "metadata": {},
    "outputs": [
@@ -3922,7 +3951,7 @@
        "(13556, 28)"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
